# PrismTerm

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/app/layouts/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
apps/desktop/src/features/connections/components/: ConnectionList.tsx
apps/desktop/src/features/sessions/components/: SessionInspector.tsx
apps/desktop/src/features/terminal/components/: TerminalPreview.tsx
apps/desktop/src/styles/: global.css
crates/prism-core/: Cargo.toml
crates/prism-plugin-api/: Cargo.toml
crates/prism-ssh/: Cargo.toml
crates/prism-storage/: Cargo.toml
crates/prism-terminal/: Cargo.toml
