[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/prism-core",
    "crates/prism-ssh",
    "crates/prism-terminal",
    "crates/prism-storage",
    "crates/prism-plugin-api"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hierarch"]
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
